--- a/sass/style.css
+++ b/sass/style.css
@@ -307,9 +307,23 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 .mission-headers {
-  background-color: rgba(103, 188, 66, 0.568627451);
+  background-color: #85FFBD;
+  background-image: linear-gradient(45deg,#ebebeb  0%, #7b93a7 100%);
   border-radius: 10px;
   margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.mission-content-div {
+  height: 100px;
+  width: 100px;
+}
+
+.mission-title {
+  font-size: larger;
+  color: #0a151d;
 }
 
 .mission-content {
@@ -317,6 +331,7 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 5px;
   font-size: 18px;
   min-height: 125px;
+  align-items: center;
 }
 
 .mission-point {
